--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,26 +5,26 @@
   "version": "0.2.0",
   "configurations": [
 
-    // {
-    //   "type": "node",
-    //   "request": "launch",
-    //   "name": "js debug",
-    //   "skipFiles": [
-    //     "<node_internals>/**/*.js"
-    //   ],
-    //   "program": "${workspaceFolder}\\${file}"
-    // },
     {
       "type": "node",
       "request": "launch",
-      "name": "ts debug",
-      "runtimeArgs": [
-          "-r",
-          "ts-node/register"
+      "name": "js debug",
+      "skipFiles": [
+        "<node_internals>/**/*.js"
       ],
-      "args": [
-          "${file}"
-      ]
-  }
+      "program": "${workspaceFolder}\\${file}"
+    },
+  //   {
+  //     "type": "node",
+  //     "request": "launch",
+  //     "name": "ts debug",
+  //     "runtimeArgs": [
+  //         "-r",
+  //         "ts-node/register"
+  //     ],
+  //     "args": [
+  //         "${file}"
+  //     ]2
+  // }
   ]
 }
